<resources>
    <string name="app_name">My Application</string>

    <string name="title1">학교종</string>
    <string name="artist1">김메리</string>
    <string name="time1">00:00:19</string>
    <string name="audio1">schoolbell</string>
    <string name="image1">img_schoolbell</string>
    <string name="lyrics1">
        학교종이 땡땡땡\n
        어서 모이자\n
        선생님이 우리를\n
        기다리신다\n
    </string>

    <string name="title2">코끼리 아저씨</string>
    <string name="artist2">강소현/박태현</string>
    <string name="time2">00:00:16</string>
    <string name="audio2">elephant</string>
    <string name="image2">img_elephant</string>
    <string name="lyrics2">
        코끼리 아저씨는\n
        코가 손이래\n
        과자를 주면은\n
        코로 받지요\n
    </string>

    <string name="title3">산토끼</string>
    <string name="artist3">이일래</string>
    <string name="time3">00:00:16</string>
    <string name="audio3">hare</string>
    <string name="image3">img_hare</string>
    <string name="lyrics3">
        산토끼 토끼야\n
        어디를 가느냐\n
        깡총깡총 뛰면서\n
        어디를 가느냐\n
    </string>
</resources>